--- a/src/UI/Components/Inventory/InventoryV0/InventoryV0.css
+++ b/src/UI/Components/Inventory/InventoryV0/InventoryV0.css
@@ -19,7 +19,7 @@
 #InventoryV0 .content { overflow:auto; width:100%; height:100%; min-height:65px; background-color:transparent; background-repeat:repeat;  background-attachment: local;}
 
 #InventoryV0 .content .item { display:block; width:24px; height:24px; margin:4px 4px 4px 4px; position:relative; float:left; }
-#InventoryV0 .content .item .icon { width:24px; height:24px; border:none; background-color:transparent; background-repeat:no-repeat; }
+#InventoryV0 .content .item .icon { position: absolute; top: 0px; width:24px; height:24px; border:none; background-color:transparent; background-repeat:no-repeat; }
 #InventoryV0 .overlay {
     position: absolute;
     display: none;
@@ -34,8 +34,19 @@
     text-shadow: 1px 1px black;
 }
 #InventoryV0 .overlay.grey { color:#aaa; }
-#InventoryV0 .content .item .amount { position:relative; font-size:11px; bottom:9px; right:0px; text-align:right; text-shadow:-1px -1px white; }
+#InventoryV0 .content .item .amount { position:absolute; top:15px; font-size:11px; bottom:9px; right:0px; text-align:right; text-shadow:-1px -1px white; }
 
 #InventoryV0 .footer { width:100%; height:27px; background-repeat:repeat-x; background-color:transparent; position:relative; border-right:1px solid #ccc; }
 #InventoryV0 .footer .cnt { position:absolute; left:10px; bottom:6px; font-size:12px; }
 #InventoryV0 .footer button { position:absolute; right:0px; bottom:1px; width:13px; height:13px; border:none; background-repeat:no-repeat; background-color:transparent; }
+
+#InventoryV0 .content .item .new_item {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    pointer-events: none;
+    top: -5px;
+    left: -5px;
+}
